erDiagram
    CUSTOMER {
        int id PK
        String name
        String surname
        String email UK
        String phoneNumber
    }

    ACCOUNT {
        int id PK
        String IBAN UK
        double balance
        String currency
        String type
        int customer_id FK
    }

    CARD {
        int id PK
        String cardNumber UK
        LocalDate expirationDate
        String type
        int accountId FK
    }

    TRANSACTION {
        int id PK
        String type
        double amount
        String currency
        LocalDate date
        int fromAccountId FK
        int toAccountId FK
    }

    LOAN {
        int id PK
        double amount
        double interestRate
        LocalDate startDate
        LocalDate endDate
        String status
        int accountId FK
    }

    CUSTOMER ||--o{ ACCOUNT : has
    ACCOUNT ||--o{ CARD : has
    ACCOUNT ||--o{ TRANSACTION : fromAccount
    ACCOUNT ||--o{ TRANSACTION : toAccount
    ACCOUNT ||--o{ LOAN : has